--- a/markr/Base.lproj/Main.storyboard
+++ b/markr/Base.lproj/Main.storyboard
@@ -738,16 +738,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                                 <subviews>
                                     <scrollView focusRingType="none" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DC3-EL-kW9">
-                                        <rect key="frame" x="20" y="20" width="410" height="248"/>
+                                        <rect key="frame" x="20" y="20" width="410" height="250"/>
                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="cVQ-Jl-B0g">
-                                            <rect key="frame" x="0.0" y="0.0" width="395" height="248"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="250"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <textView drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" fieldEditor="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="7j5-G1-2Rn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="395" height="248"/>
+                                                <textView drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="7j5-G1-2Rn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="250"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    <size key="minSize" width="395" height="248"/>
+                                                    <size key="minSize" width="394" height="250"/>
                                                     <size key="maxSize" width="463" height="10000000"/>
                                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <connections>
@@ -766,7 +766,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Hgg-ax-WAq">
-                                            <rect key="frame" x="395" y="0.0" width="15" height="248"/>
+                                            <rect key="frame" x="394" y="0.0" width="16" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
@@ -787,7 +787,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="DC3-EL-kW9" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="32" id="1O3-xc-ay2"/>
+                                    <constraint firstItem="DC3-EL-kW9" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="30" id="1O3-xc-ay2"/>
                                     <constraint firstItem="R6J-Ms-uYq" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="20" symbolic="YES" id="9ZQ-GV-ntQ"/>
                                     <constraint firstAttribute="bottom" secondItem="DC3-EL-kW9" secondAttribute="bottom" constant="20" symbolic="YES" id="HIw-CA-JHA"/>
                                     <constraint firstAttribute="trailing" secondItem="DC3-EL-kW9" secondAttribute="trailing" constant="20" symbolic="YES" id="QTy-gt-5Nx"/>
@@ -818,7 +818,55 @@
                     <view key="view" id="MI3-V7-z8Z">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <visualEffectView fixedFrame="YES" blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-Q1-4y9">
+                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </visualEffectView>
+                            <scrollView focusRingType="none" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKG-uc-AHp">
+                                <rect key="frame" x="20" y="20" width="410" height="255"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="q9i-5o-5nX">
+                                    <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textView editable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="3e2-qw-LVW">
+                                            <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <size key="minSize" width="410" height="255"/>
+                                            <size key="maxSize" width="463" height="10000000"/>
+                                            <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <connections>
+                                                <binding destination="iwu-Q3-E8a" name="attributedString" keyPath="attributedTextInput" id="diE-vv-gFW">
+                                                    <dictionary key="options">
+                                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                                    </dictionary>
+                                                </binding>
+                                            </connections>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="U2y-33-qFm">
+                                    <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="OeP-Fv-sAr">
+                                    <rect key="frame" x="394" y="0.0" width="16" height="255"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="YKG-uc-AHp" firstAttribute="top" secondItem="MI3-V7-z8Z" secondAttribute="top" constant="25" id="BAf-L2-Ofa"/>
+                            <constraint firstAttribute="trailing" secondItem="YKG-uc-AHp" secondAttribute="trailing" constant="20" id="LYz-Ym-pNg"/>
+                            <constraint firstItem="YKG-uc-AHp" firstAttribute="leading" secondItem="MI3-V7-z8Z" secondAttribute="leading" constant="20" id="cA0-GT-OzP"/>
+                            <constraint firstAttribute="bottom" secondItem="YKG-uc-AHp" secondAttribute="bottom" constant="20" id="kFD-fD-6Le"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="markdown" destination="3e2-qw-LVW" id="wta-ab-gD5"/>
+                    </connections>
                 </viewController>
                 <customObject id="fUN-OR-Iyc" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
