--- a/markr/Base.lproj/Main.storyboard
+++ b/markr/Base.lproj/Main.storyboard
@@ -64,9 +64,9 @@
                                                 <action selector="newDocument:" target="Ady-hI-5gd" id="4Si-XN-c54"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Open…" keyEquivalent="o" id="IAo-SY-fd9">
+                                        <menuItem title="Open…" alternate="YES" keyEquivalent="o" id="IAo-SY-fd9">
                                             <connections>
-                                                <action selector="openDocument:" target="Ady-hI-5gd" id="bVn-NM-KNZ"/>
+                                                <action selector="openFile:" target="Ady-hI-5gd" id="9Gh-vH-5yh"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Open Recent" id="tXI-mr-wws">
@@ -737,17 +737,17 @@
                             <visualEffectView blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="Mmq-IE-VDa">
                                 <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                                 <subviews>
-                                    <scrollView focusRingType="none" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DC3-EL-kW9">
+                                    <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DC3-EL-kW9">
                                         <rect key="frame" x="20" y="20" width="410" height="250"/>
                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="cVQ-Jl-B0g">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="250"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="410" height="250"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <textView drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="7j5-G1-2Rn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="250"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="410" height="250"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    <size key="minSize" width="394" height="250"/>
+                                                    <size key="minSize" width="410" height="250"/>
                                                     <size key="maxSize" width="463" height="10000000"/>
                                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <connections>
@@ -765,8 +765,8 @@
                                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Hgg-ax-WAq">
-                                            <rect key="frame" x="394" y="0.0" width="16" height="250"/>
+                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Hgg-ax-WAq">
+                                            <rect key="frame" x="-100" y="-100" width="15" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
@@ -819,17 +819,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <visualEffectView fixedFrame="YES" blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-Q1-4y9">
+                            <visualEffectView blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-Q1-4y9">
                                 <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </visualEffectView>
-                            <scrollView focusRingType="none" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKG-uc-AHp">
+                            <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKG-uc-AHp">
                                 <rect key="frame" x="20" y="20" width="410" height="255"/>
-                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="q9i-5o-5nX">
+                                <clipView key="contentView" focusRingType="none" drawsBackground="NO" copiesOnScroll="NO" id="q9i-5o-5nX">
                                     <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <textView editable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="3e2-qw-LVW">
+                                        <textView focusRingType="none" editable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="3e2-qw-LVW">
                                             <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -851,16 +850,20 @@
                                     <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="OeP-Fv-sAr">
-                                    <rect key="frame" x="394" y="0.0" width="16" height="255"/>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="OeP-Fv-sAr">
+                                    <rect key="frame" x="-100" y="-100" width="16" height="255"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="VUw-Q1-4y9" firstAttribute="leading" secondItem="MI3-V7-z8Z" secondAttribute="leading" id="7yj-EJ-7Lo"/>
+                            <constraint firstItem="VUw-Q1-4y9" firstAttribute="top" secondItem="MI3-V7-z8Z" secondAttribute="top" id="AdW-XS-TQu"/>
                             <constraint firstItem="YKG-uc-AHp" firstAttribute="top" secondItem="MI3-V7-z8Z" secondAttribute="top" constant="25" id="BAf-L2-Ofa"/>
                             <constraint firstAttribute="trailing" secondItem="YKG-uc-AHp" secondAttribute="trailing" constant="20" id="LYz-Ym-pNg"/>
+                            <constraint firstItem="VUw-Q1-4y9" firstAttribute="centerX" secondItem="YKG-uc-AHp" secondAttribute="centerX" id="N8c-iS-TPb"/>
                             <constraint firstItem="YKG-uc-AHp" firstAttribute="leading" secondItem="MI3-V7-z8Z" secondAttribute="leading" constant="20" id="cA0-GT-OzP"/>
+                            <constraint firstAttribute="bottom" secondItem="VUw-Q1-4y9" secondAttribute="bottom" id="cko-HB-EEv"/>
                             <constraint firstAttribute="bottom" secondItem="YKG-uc-AHp" secondAttribute="bottom" constant="20" id="kFD-fD-6Le"/>
                         </constraints>
                     </view>
