--- a/markr/Base.lproj/Main.storyboard
+++ b/markr/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                                         </menuItem>
                                         <menuItem title="Save…" keyEquivalent="s" id="pxx-59-PXV">
                                             <connections>
-                                                <action selector="saveDocument:" target="Ady-hI-5gd" id="teZ-XB-qJY"/>
+                                                <action selector="saveFile:" target="Ady-hI-5gd" id="Qgk-L5-sMH"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Save As…" keyEquivalent="S" id="Bw7-FT-i3A">
@@ -682,7 +682,7 @@
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="0.0"/>
+            <point key="canvasLocation" x="67" y="-69"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
@@ -691,8 +691,9 @@
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="597" y="322" width="480" height="400"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minSize" type="size" width="400" height="200"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
@@ -713,8 +714,8 @@
                         <splitViewItem id="Qq9-Iv-znH"/>
                         <splitViewItem id="qda-gw-SQV"/>
                     </splitViewItems>
-                    <splitView key="splitView" dividerStyle="thin" vertical="YES" id="u24-wH-L2A">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                    <splitView key="splitView" misplaced="YES" dividerStyle="thin" vertical="YES" id="u24-wH-L2A">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="400"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <outlet property="delegate" destination="L8O-ff-Jvf" id="jdU-4C-TFo"/>
@@ -791,24 +792,24 @@
             <objects>
                 <viewController id="iwu-Q3-E8a" customClass="EditorViewController" customModule="markr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="IzQ-kx-bse">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <visualEffectView blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="Mmq-IE-VDa">
-                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
                                 <subviews>
                                     <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DC3-EL-kW9">
-                                        <rect key="frame" x="20" y="20" width="410" height="250"/>
+                                        <rect key="frame" x="20" y="20" width="560" height="445"/>
                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="cVQ-Jl-B0g">
-                                            <rect key="frame" x="0.0" y="0.0" width="410" height="250"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="445"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <textView drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="7j5-G1-2Rn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="410" height="250"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="445"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    <size key="minSize" width="410" height="250"/>
-                                                    <size key="maxSize" width="463" height="10000000"/>
+                                                    <size key="minSize" width="560" height="445"/>
+                                                    <size key="maxSize" width="560" height="10000000"/>
                                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <connections>
                                                         <binding destination="iwu-Q3-E8a" name="attributedString" keyPath="attributedTextInput" id="rBi-yT-AFk">
@@ -831,7 +832,7 @@
                                         </scroller>
                                     </scrollView>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="R6J-Ms-uYq">
-                                        <rect key="frame" x="416" y="261" width="14" height="19"/>
+                                        <rect key="frame" x="566" y="461" width="14" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="19" id="XAt-EG-4wT"/>
                                         </constraints>
@@ -847,7 +848,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="DC3-EL-kW9" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="30" id="1O3-xc-ay2"/>
+                                    <constraint firstItem="DC3-EL-kW9" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="35" id="1O3-xc-ay2"/>
                                     <constraint firstItem="R6J-Ms-uYq" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="20" symbolic="YES" id="9ZQ-GV-ntQ"/>
                                     <constraint firstAttribute="bottom" secondItem="DC3-EL-kW9" secondAttribute="bottom" constant="20" symbolic="YES" id="HIw-CA-JHA"/>
                                     <constraint firstAttribute="trailing" secondItem="DC3-EL-kW9" secondAttribute="trailing" constant="20" symbolic="YES" id="QTy-gt-5Nx"/>
@@ -870,31 +871,31 @@
                 </viewController>
                 <customObject id="vsv-SA-HMq" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749" y="559"/>
+            <point key="canvasLocation" x="737" y="572"/>
         </scene>
         <!--Markdown View Controller-->
         <scene sceneID="ckF-ki-IJJ">
             <objects>
                 <viewController id="ovJ-5Y-NbJ" customClass="MarkdownViewController" customModule="markr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="MI3-V7-z8Z">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <visualEffectView blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-Q1-4y9">
-                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
                             </visualEffectView>
                             <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKG-uc-AHp">
-                                <rect key="frame" x="20" y="20" width="410" height="255"/>
+                                <rect key="frame" x="20" y="20" width="560" height="455"/>
                                 <clipView key="contentView" focusRingType="none" drawsBackground="NO" copiesOnScroll="NO" id="q9i-5o-5nX">
-                                    <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="560" height="455"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView focusRingType="none" editable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsCharacterPickerTouchBarItem="NO" allowsUndo="YES" textCompletion="NO" id="3e2-qw-LVW">
-                                            <rect key="frame" x="0.0" y="0.0" width="410" height="255"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="455"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" name="windowBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="410" height="255"/>
-                                            <size key="maxSize" width="463" height="10000000"/>
+                                            <size key="minSize" width="560" height="455"/>
+                                            <size key="maxSize" width="560" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <connections>
                                                 <binding destination="iwu-Q3-E8a" name="attributedString" keyPath="attributedTextInput" id="diE-vv-gFW">
@@ -935,7 +936,7 @@
                 </viewController>
                 <customObject id="fUN-OR-Iyc" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749" y="931"/>
+            <point key="canvasLocation" x="737" y="1166"/>
         </scene>
     </scenes>
     <resources>
