--- a/markr/Base.lproj/Main.storyboard
+++ b/markr/Base.lproj/Main.storyboard
@@ -677,6 +677,7 @@
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                        <windowCollectionBehavior key="collectionBehavior" fullScreenNone="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="597" y="322" width="480" height="400"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
@@ -831,7 +832,7 @@
                                         </scroller>
                                     </scrollView>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="R6J-Ms-uYq">
-                                        <rect key="frame" x="566" y="473" width="14" height="19"/>
+                                        <rect key="frame" x="566" y="472" width="14" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="19" id="XAt-EG-4wT"/>
                                         </constraints>
@@ -857,7 +858,7 @@
                                 <constraints>
                                     <constraint firstItem="DC3-EL-kW9" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="40" id="1O3-xc-ay2"/>
                                     <constraint firstItem="bfP-Ob-0vA" firstAttribute="leading" secondItem="Mmq-IE-VDa" secondAttribute="leading" constant="8" id="2Is-UT-06v"/>
-                                    <constraint firstItem="R6J-Ms-uYq" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="8" id="9ZQ-GV-ntQ"/>
+                                    <constraint firstItem="R6J-Ms-uYq" firstAttribute="top" secondItem="Mmq-IE-VDa" secondAttribute="top" constant="9" id="9ZQ-GV-ntQ"/>
                                     <constraint firstAttribute="bottom" secondItem="bfP-Ob-0vA" secondAttribute="bottom" constant="8" id="EnX-2E-DcB"/>
                                     <constraint firstAttribute="bottom" secondItem="DC3-EL-kW9" secondAttribute="bottom" constant="30" id="HIw-CA-JHA"/>
                                     <constraint firstAttribute="trailing" secondItem="DC3-EL-kW9" secondAttribute="trailing" constant="20" symbolic="YES" id="QTy-gt-5Nx"/>
